6/6/parser.output
Grammar

    0 $accept: Start $end

    1 Start: Classes

    2 Classes: Class
    3        | Classes Class

    4 Class: T_ID '{' Members Methods '}'
    5      | T_ID T_EXTEND T_ID '{' Members Methods '}'

    6 Members: Members Member
    7        | %empty

    8 Member: Type MemberVar ';'

    9 MemberVar: T_ID

   10 Methods: Method Methods
   11        | %empty

   12 Method: T_ID '(' ParamList ')' T_ARROW ReturnType '{' Body '}'

   13 ParamList: Params
   14          | %empty

   15 Params: Params ',' Param
   16       | Param

   17 Param: Type T_ID

   18 ReturnType: Type
   19           | T_NONE

   20 Body: Declarations Statements Return

   21 Declarations: Declarations Declaration
   22             | %empty

   23 Declaration: Type Variables ';'

   24 Variables: T_ID
   25          | Variables ',' T_ID

   26 Statements: Statement Statements
   27           | %empty

   28 Statement: Assign
   29          | MethodCall ';'
   30          | If
   31          | While
   32          | DoWhile
   33          | Print

   34 Assign: T_ID T_ASSIGN Expr ';'
   35       | T_ID '.' T_ID T_ASSIGN Expr ';'

   36 MethodCall: T_ID '(' ArgList ')'
   37           | T_ID '.' T_ID '(' ArgList ')'

   38 ArgList: Args
   39        | %empty

   40 Args: Args ',' Expr
   41     | Expr

   42 If: T_IF Expr '{' Block '}'
   43   | T_IF Expr '{' Block '}' T_ELSE '{' Block '}'

   44 While: T_WHILE Expr '{' Block '}'

   45 DoWhile: T_DO '{' Block '}' T_WHILE '(' Expr ')' ';'

   46 Block: Block Statement
   47      | Statement

   48 Print: T_PRINT Expr ';'

   49 Return: T_RETURN Expr ';'
   50       | %empty

   51 Expr: Expr T_PLUS Expr
   52     | Expr T_MINUS Expr
   53     | Expr T_MULT Expr
   54     | Expr T_DIV Expr
   55     | Expr T_GT Expr
   56     | Expr T_GE Expr
   57     | Expr T_EQ Expr
   58     | Expr T_AND Expr
   59     | Expr T_OR Expr
   60     | T_NOT Expr
   61     | T_MINUS Expr
   62     | T_ID
   63     | MemberAccess
   64     | MethodCall
   65     | '(' Expr ')'
   66     | T_NUM
   67     | T_TRUE
   68     | T_FALSE
   69     | T_NEW T_ID
   70     | T_NEW T_ID '(' ArgList ')'

   71 MemberAccess: T_ID '.' T_ID

   72 Type: T_ID
   73     | T_INT
   74     | T_BOOL


Terminals, with rules where they appear

$end (0) 0
'(' (40) 12 36 37 45 65 70
')' (41) 12 36 37 45 65 70
',' (44) 15 25 40
'.' (46) 35 37 71
';' (59) 8 23 29 34 35 45 48 49
'{' (123) 4 5 12 42 43 44 45
'}' (125) 4 5 12 42 43 44 45
error (256)
T_NUM (258) 66
T_EXTEND (259) 5
T_PLUS (260) 51
T_MINUS (261) 52 61
T_MULT (262) 53
T_DIV (263) 54
T_ASSIGN (264) 34 35
T_ARROW (265) 12
T_IF (266) 42 43
T_ELSE (267) 43
T_WHILE (268) 44 45
T_DO (269) 45
T_PRINT (270) 48
T_GT (271) 55
T_GE (272) 56
T_NEW (273) 69 70
T_TRUE (274) 67
T_FALSE (275) 68
T_NOT (276) 60
T_AND (277) 58
T_OR (278) 59
T_EQ (279) 57
T_RETURN (280) 49
T_NONE (281) 19
T_ID (282) 4 5 9 12 17 24 25 34 35 36 37 62 69 70 71 72
T_INT (283) 73
T_BOOL (284) 74
U_MINUS (285)


Nonterminals, with rules where they appear

$accept (38)
    on left: 0
Start (39)
    on left: 1, on right: 0
Classes (40)
    on left: 2 3, on right: 1 3
Class (41)
    on left: 4 5, on right: 2 3
Members (42)
    on left: 6 7, on right: 4 5 6
Member (43)
    on left: 8, on right: 6
MemberVar (44)
    on left: 9, on right: 8
Methods (45)
    on left: 10 11, on right: 4 5 10
Method (46)
    on left: 12, on right: 10
ParamList (47)
    on left: 13 14, on right: 12
Params (48)
    on left: 15 16, on right: 13 15
Param (49)
    on left: 17, on right: 15 16
ReturnType (50)
    on left: 18 19, on right: 12
Body (51)
    on left: 20, on right: 12
Declarations (52)
    on left: 21 22, on right: 20 21
Declaration (53)
    on left: 23, on right: 21
Variables (54)
    on left: 24 25, on right: 23 25
Statements (55)
    on left: 26 27, on right: 20 26
Statement (56)
    on left: 28 29 30 31 32 33, on right: 26 46 47
Assign (57)
    on left: 34 35, on right: 28
MethodCall (58)
    on left: 36 37, on right: 29 64
ArgList (59)
    on left: 38 39, on right: 36 37 70
Args (60)
    on left: 40 41, on right: 38 40
If (61)
    on left: 42 43, on right: 30
While (62)
    on left: 44, on right: 31
DoWhile (63)
    on left: 45, on right: 32
Block (64)
    on left: 46 47, on right: 42 43 44 45 46
Print (65)
    on left: 48, on right: 33
Return (66)
    on left: 49 50, on right: 20
Expr (67)
    on left: 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67 68
    69 70, on right: 34 35 40 41 42 43 44 45 48 49 51 52 53 54 55 56
    57 58 59 60 61 65
MemberAccess (68)
    on left: 71, on right: 63
Type (69)
    on left: 72 73 74, on right: 8 17 18 23


State 0

    0 $accept: . Start $end

    T_ID  shift, and go to state 1

    Start    go to state 2
    Classes  go to state 3
    Class    go to state 4


State 1

    4 Class: T_ID . '{' Members Methods '}'
    5      | T_ID . T_EXTEND T_ID '{' Members Methods '}'

    T_EXTEND  shift, and go to state 5
    '{'       shift, and go to state 6


State 2

    0 $accept: Start . $end

    $end  shift, and go to state 7


State 3

    1 Start: Classes .
    3 Classes: Classes . Class

    T_ID  shift, and go to state 1

    $default  reduce using rule 1 (Start)

    Class  go to state 8


State 4

    2 Classes: Class .

    $default  reduce using rule 2 (Classes)


State 5

    5 Class: T_ID T_EXTEND . T_ID '{' Members Methods '}'

    T_ID  shift, and go to state 9


State 6

    4 Class: T_ID '{' . Members Methods '}'

    $default  reduce using rule 7 (Members)

    Members  go to state 10


State 7

    0 $accept: Start $end .

    $default  accept


State 8

    3 Classes: Classes Class .

    $default  reduce using rule 3 (Classes)


State 9

    5 Class: T_ID T_EXTEND T_ID . '{' Members Methods '}'

    '{'  shift, and go to state 11


State 10

    4 Class: T_ID '{' Members . Methods '}'
    6 Members: Members . Member

    T_ID    shift, and go to state 12
    T_INT   shift, and go to state 13
    T_BOOL  shift, and go to state 14

    $default  reduce using rule 11 (Methods)

    Member   go to state 15
    Methods  go to state 16
    Method   go to state 17
    Type     go to state 18


State 11

    5 Class: T_ID T_EXTEND T_ID '{' . Members Methods '}'

    $default  reduce using rule 7 (Members)

    Members  go to state 19


State 12

   12 Method: T_ID . '(' ParamList ')' T_ARROW ReturnType '{' Body '}'
   72 Type: T_ID .

    '('  shift, and go to state 20

    $default  reduce using rule 72 (Type)


State 13

   73 Type: T_INT .

    $default  reduce using rule 73 (Type)


State 14

   74 Type: T_BOOL .

    $default  reduce using rule 74 (Type)


State 15

    6 Members: Members Member .

    $default  reduce using rule 6 (Members)


State 16

    4 Class: T_ID '{' Members Methods . '}'

    '}'  shift, and go to state 21


State 17

   10 Methods: Method . Methods

    T_ID  shift, and go to state 22

    $default  reduce using rule 11 (Methods)

    Methods  go to state 23
    Method   go to state 17


State 18

    8 Member: Type . MemberVar ';'

    T_ID  shift, and go to state 24

    MemberVar  go to state 25


State 19

    5 Class: T_ID T_EXTEND T_ID '{' Members . Methods '}'
    6 Members: Members . Member

    T_ID    shift, and go to state 12
    T_INT   shift, and go to state 13
    T_BOOL  shift, and go to state 14

    $default  reduce using rule 11 (Methods)

    Member   go to state 15
    Methods  go to state 26
    Method   go to state 17
    Type     go to state 18


State 20

   12 Method: T_ID '(' . ParamList ')' T_ARROW ReturnType '{' Body '}'

    T_ID    shift, and go to state 27
    T_INT   shift, and go to state 13
    T_BOOL  shift, and go to state 14

    $default  reduce using rule 14 (ParamList)

    ParamList  go to state 28
    Params     go to state 29
    Param      go to state 30
    Type       go to state 31


State 21

    4 Class: T_ID '{' Members Methods '}' .

    $default  reduce using rule 4 (Class)


State 22

   12 Method: T_ID . '(' ParamList ')' T_ARROW ReturnType '{' Body '}'

    '('  shift, and go to state 20


State 23

   10 Methods: Method Methods .

    $default  reduce using rule 10 (Methods)


State 24

    9 MemberVar: T_ID .

    $default  reduce using rule 9 (MemberVar)


State 25

    8 Member: Type MemberVar . ';'

    ';'  shift, and go to state 32


State 26

    5 Class: T_ID T_EXTEND T_ID '{' Members Methods . '}'

    '}'  shift, and go to state 33


State 27

   72 Type: T_ID .

    $default  reduce using rule 72 (Type)


State 28

   12 Method: T_ID '(' ParamList . ')' T_ARROW ReturnType '{' Body '}'

    ')'  shift, and go to state 34


State 29

   13 ParamList: Params .
   15 Params: Params . ',' Param

    ','  shift, and go to state 35

    $default  reduce using rule 13 (ParamList)


State 30

   16 Params: Param .

    $default  reduce using rule 16 (Params)


State 31

   17 Param: Type . T_ID

    T_ID  shift, and go to state 36


State 32

    8 Member: Type MemberVar ';' .

    $default  reduce using rule 8 (Member)


State 33

    5 Class: T_ID T_EXTEND T_ID '{' Members Methods '}' .

    $default  reduce using rule 5 (Class)


State 34

   12 Method: T_ID '(' ParamList ')' . T_ARROW ReturnType '{' Body '}'

    T_ARROW  shift, and go to state 37


State 35

   15 Params: Params ',' . Param

    T_ID    shift, and go to state 27
    T_INT   shift, and go to state 13
    T_BOOL  shift, and go to state 14

    Param  go to state 38
    Type   go to state 31


State 36

   17 Param: Type T_ID .

    $default  reduce using rule 17 (Param)


State 37

   12 Method: T_ID '(' ParamList ')' T_ARROW . ReturnType '{' Body '}'

    T_NONE  shift, and go to state 39
    T_ID    shift, and go to state 27
    T_INT   shift, and go to state 13
    T_BOOL  shift, and go to state 14

    ReturnType  go to state 40
    Type        go to state 41


State 38

   15 Params: Params ',' Param .

    $default  reduce using rule 15 (Params)


State 39

   19 ReturnType: T_NONE .

    $default  reduce using rule 19 (ReturnType)


State 40

   12 Method: T_ID '(' ParamList ')' T_ARROW ReturnType . '{' Body '}'

    '{'  shift, and go to state 42


State 41

   18 ReturnType: Type .

    $default  reduce using rule 18 (ReturnType)


State 42

   12 Method: T_ID '(' ParamList ')' T_ARROW ReturnType '{' . Body '}'

    $default  reduce using rule 22 (Declarations)

    Body          go to state 43
    Declarations  go to state 44


State 43

   12 Method: T_ID '(' ParamList ')' T_ARROW ReturnType '{' Body . '}'

    '}'  shift, and go to state 45


State 44

   20 Body: Declarations . Statements Return
   21 Declarations: Declarations . Declaration

    T_IF     shift, and go to state 46
    T_WHILE  shift, and go to state 47
    T_DO     shift, and go to state 48
    T_PRINT  shift, and go to state 49
    T_ID     shift, and go to state 50
    T_INT    shift, and go to state 13
    T_BOOL   shift, and go to state 14

    $default  reduce using rule 27 (Statements)

    Declaration  go to state 51
    Statements   go to state 52
    Statement    go to state 53
    Assign       go to state 54
    MethodCall   go to state 55
    If           go to state 56
    While        go to state 57
    DoWhile      go to state 58
    Print        go to state 59
    Type         go to state 60


State 45

   12 Method: T_ID '(' ParamList ')' T_ARROW ReturnType '{' Body '}' .

    $default  reduce using rule 12 (Method)


State 46

   42 If: T_IF . Expr '{' Block '}'
   43   | T_IF . Expr '{' Block '}' T_ELSE '{' Block '}'

    T_NUM    shift, and go to state 61
    T_MINUS  shift, and go to state 62
    T_NEW    shift, and go to state 63
    T_TRUE   shift, and go to state 64
    T_FALSE  shift, and go to state 65
    T_NOT    shift, and go to state 66
    T_ID     shift, and go to state 67
    '('      shift, and go to state 68

    MethodCall    go to state 69
    Expr          go to state 70
    MemberAccess  go to state 71


State 47

   44 While: T_WHILE . Expr '{' Block '}'

    T_NUM    shift, and go to state 61
    T_MINUS  shift, and go to state 62
    T_NEW    shift, and go to state 63
    T_TRUE   shift, and go to state 64
    T_FALSE  shift, and go to state 65
    T_NOT    shift, and go to state 66
    T_ID     shift, and go to state 67
    '('      shift, and go to state 68

    MethodCall    go to state 69
    Expr          go to state 72
    MemberAccess  go to state 71


State 48

   45 DoWhile: T_DO . '{' Block '}' T_WHILE '(' Expr ')' ';'

    '{'  shift, and go to state 73


State 49

   48 Print: T_PRINT . Expr ';'

    T_NUM    shift, and go to state 61
    T_MINUS  shift, and go to state 62
    T_NEW    shift, and go to state 63
    T_TRUE   shift, and go to state 64
    T_FALSE  shift, and go to state 65
    T_NOT    shift, and go to state 66
    T_ID     shift, and go to state 67
    '('      shift, and go to state 68

    MethodCall    go to state 69
    Expr          go to state 74
    MemberAccess  go to state 71


State 50

   34 Assign: T_ID . T_ASSIGN Expr ';'
   35       | T_ID . '.' T_ID T_ASSIGN Expr ';'
   36 MethodCall: T_ID . '(' ArgList ')'
   37           | T_ID . '.' T_ID '(' ArgList ')'
   72 Type: T_ID .

    T_ASSIGN  shift, and go to state 75
    '('       shift, and go to state 76
    '.'       shift, and go to state 77

    $default  reduce using rule 72 (Type)


State 51

   21 Declarations: Declarations Declaration .

    $default  reduce using rule 21 (Declarations)


State 52

   20 Body: Declarations Statements . Return

    T_RETURN  shift, and go to state 78

    $default  reduce using rule 50 (Return)

    Return  go to state 79


State 53

   26 Statements: Statement . Statements

    T_IF     shift, and go to state 46
    T_WHILE  shift, and go to state 47
    T_DO     shift, and go to state 48
    T_PRINT  shift, and go to state 49
    T_ID     shift, and go to state 80

    $default  reduce using rule 27 (Statements)

    Statements  go to state 81
    Statement   go to state 53
    Assign      go to state 54
    MethodCall  go to state 55
    If          go to state 56
    While       go to state 57
    DoWhile     go to state 58
    Print       go to state 59


State 54

   28 Statement: Assign .

    $default  reduce using rule 28 (Statement)


State 55

   29 Statement: MethodCall . ';'

    ';'  shift, and go to state 82


State 56

   30 Statement: If .

    $default  reduce using rule 30 (Statement)


State 57

   31 Statement: While .

    $default  reduce using rule 31 (Statement)


State 58

   32 Statement: DoWhile .

    $default  reduce using rule 32 (Statement)


State 59

   33 Statement: Print .

    $default  reduce using rule 33 (Statement)


State 60

   23 Declaration: Type . Variables ';'

    T_ID  shift, and go to state 83

    Variables  go to state 84


State 61

   66 Expr: T_NUM .

    $default  reduce using rule 66 (Expr)


State 62

   61 Expr: T_MINUS . Expr

    T_NUM    shift, and go to state 61
    T_MINUS  shift, and go to state 62
    T_NEW    shift, and go to state 63
    T_TRUE   shift, and go to state 64
    T_FALSE  shift, and go to state 65
    T_NOT    shift, and go to state 66
    T_ID     shift, and go to state 67
    '('      shift, and go to state 68

    MethodCall    go to state 69
    Expr          go to state 85
    MemberAccess  go to state 71


State 63

   69 Expr: T_NEW . T_ID
   70     | T_NEW . T_ID '(' ArgList ')'

    T_ID  shift, and go to state 86


State 64

   67 Expr: T_TRUE .

    $default  reduce using rule 67 (Expr)


State 65

   68 Expr: T_FALSE .

    $default  reduce using rule 68 (Expr)


State 66

   60 Expr: T_NOT . Expr

    T_NUM    shift, and go to state 61
    T_MINUS  shift, and go to state 62
    T_NEW    shift, and go to state 63
    T_TRUE   shift, and go to state 64
    T_FALSE  shift, and go to state 65
    T_NOT    shift, and go to state 66
    T_ID     shift, and go to state 67
    '('      shift, and go to state 68

    MethodCall    go to state 69
    Expr          go to state 87
    MemberAccess  go to state 71


State 67

   36 MethodCall: T_ID . '(' ArgList ')'
   37           | T_ID . '.' T_ID '(' ArgList ')'
   62 Expr: T_ID .
   71 MemberAccess: T_ID . '.' T_ID

    '('  shift, and go to state 76
    '.'  shift, and go to state 88

    $default  reduce using rule 62 (Expr)


State 68

   65 Expr: '(' . Expr ')'

    T_NUM    shift, and go to state 61
    T_MINUS  shift, and go to state 62
    T_NEW    shift, and go to state 63
    T_TRUE   shift, and go to state 64
    T_FALSE  shift, and go to state 65
    T_NOT    shift, and go to state 66
    T_ID     shift, and go to state 67
    '('      shift, and go to state 68

    MethodCall    go to state 69
    Expr          go to state 89
    MemberAccess  go to state 71


State 69

   64 Expr: MethodCall .

    $default  reduce using rule 64 (Expr)


State 70

   42 If: T_IF Expr . '{' Block '}'
   43   | T_IF Expr . '{' Block '}' T_ELSE '{' Block '}'
   51 Expr: Expr . T_PLUS Expr
   52     | Expr . T_MINUS Expr
   53     | Expr . T_MULT Expr
   54     | Expr . T_DIV Expr
   55     | Expr . T_GT Expr
   56     | Expr . T_GE Expr
   57     | Expr . T_EQ Expr
   58     | Expr . T_AND Expr
   59     | Expr . T_OR Expr

    T_PLUS   shift, and go to state 90
    T_MINUS  shift, and go to state 91
    T_MULT   shift, and go to state 92
    T_DIV    shift, and go to state 93
    T_GT     shift, and go to state 94
    T_GE     shift, and go to state 95
    T_AND    shift, and go to state 96
    T_OR     shift, and go to state 97
    T_EQ     shift, and go to state 98
    '{'      shift, and go to state 99


State 71

   63 Expr: MemberAccess .

    $default  reduce using rule 63 (Expr)


State 72

   44 While: T_WHILE Expr . '{' Block '}'
   51 Expr: Expr . T_PLUS Expr
   52     | Expr . T_MINUS Expr
   53     | Expr . T_MULT Expr
   54     | Expr . T_DIV Expr
   55     | Expr . T_GT Expr
   56     | Expr . T_GE Expr
   57     | Expr . T_EQ Expr
   58     | Expr . T_AND Expr
   59     | Expr . T_OR Expr

    T_PLUS   shift, and go to state 90
    T_MINUS  shift, and go to state 91
    T_MULT   shift, and go to state 92
    T_DIV    shift, and go to state 93
    T_GT     shift, and go to state 94
    T_GE     shift, and go to state 95
    T_AND    shift, and go to state 96
    T_OR     shift, and go to state 97
    T_EQ     shift, and go to state 98
    '{'      shift, and go to state 100


State 73

   45 DoWhile: T_DO '{' . Block '}' T_WHILE '(' Expr ')' ';'

    T_IF     shift, and go to state 46
    T_WHILE  shift, and go to state 47
    T_DO     shift, and go to state 48
    T_PRINT  shift, and go to state 49
    T_ID     shift, and go to state 80

    Statement   go to state 101
    Assign      go to state 54
    MethodCall  go to state 55
    If          go to state 56
    While       go to state 57
    DoWhile     go to state 58
    Block       go to state 102
    Print       go to state 59


State 74

   48 Print: T_PRINT Expr . ';'
   51 Expr: Expr . T_PLUS Expr
   52     | Expr . T_MINUS Expr
   53     | Expr . T_MULT Expr
   54     | Expr . T_DIV Expr
   55     | Expr . T_GT Expr
   56     | Expr . T_GE Expr
   57     | Expr . T_EQ Expr
   58     | Expr . T_AND Expr
   59     | Expr . T_OR Expr

    T_PLUS   shift, and go to state 90
    T_MINUS  shift, and go to state 91
    T_MULT   shift, and go to state 92
    T_DIV    shift, and go to state 93
    T_GT     shift, and go to state 94
    T_GE     shift, and go to state 95
    T_AND    shift, and go to state 96
    T_OR     shift, and go to state 97
    T_EQ     shift, and go to state 98
    ';'      shift, and go to state 103


State 75

   34 Assign: T_ID T_ASSIGN . Expr ';'

    T_NUM    shift, and go to state 61
    T_MINUS  shift, and go to state 62
    T_NEW    shift, and go to state 63
    T_TRUE   shift, and go to state 64
    T_FALSE  shift, and go to state 65
    T_NOT    shift, and go to state 66
    T_ID     shift, and go to state 67
    '('      shift, and go to state 68

    MethodCall    go to state 69
    Expr          go to state 104
    MemberAccess  go to state 71


State 76

   36 MethodCall: T_ID '(' . ArgList ')'

    T_NUM    shift, and go to state 61
    T_MINUS  shift, and go to state 62
    T_NEW    shift, and go to state 63
    T_TRUE   shift, and go to state 64
    T_FALSE  shift, and go to state 65
    T_NOT    shift, and go to state 66
    T_ID     shift, and go to state 67
    '('      shift, and go to state 68

    $default  reduce using rule 39 (ArgList)

    MethodCall    go to state 69
    ArgList       go to state 105
    Args          go to state 106
    Expr          go to state 107
    MemberAccess  go to state 71


State 77

   35 Assign: T_ID '.' . T_ID T_ASSIGN Expr ';'
   37 MethodCall: T_ID '.' . T_ID '(' ArgList ')'

    T_ID  shift, and go to state 108


State 78

   49 Return: T_RETURN . Expr ';'

    T_NUM    shift, and go to state 61
    T_MINUS  shift, and go to state 62
    T_NEW    shift, and go to state 63
    T_TRUE   shift, and go to state 64
    T_FALSE  shift, and go to state 65
    T_NOT    shift, and go to state 66
    T_ID     shift, and go to state 67
    '('      shift, and go to state 68

    MethodCall    go to state 69
    Expr          go to state 109
    MemberAccess  go to state 71


State 79

   20 Body: Declarations Statements Return .

    $default  reduce using rule 20 (Body)


State 80

   34 Assign: T_ID . T_ASSIGN Expr ';'
   35       | T_ID . '.' T_ID T_ASSIGN Expr ';'
   36 MethodCall: T_ID . '(' ArgList ')'
   37           | T_ID . '.' T_ID '(' ArgList ')'

    T_ASSIGN  shift, and go to state 75
    '('       shift, and go to state 76
    '.'       shift, and go to state 77


State 81

   26 Statements: Statement Statements .

    $default  reduce using rule 26 (Statements)


State 82

   29 Statement: MethodCall ';' .

    $default  reduce using rule 29 (Statement)


State 83

   24 Variables: T_ID .

    $default  reduce using rule 24 (Variables)


State 84

   23 Declaration: Type Variables . ';'
   25 Variables: Variables . ',' T_ID

    ';'  shift, and go to state 110
    ','  shift, and go to state 111


State 85

   51 Expr: Expr . T_PLUS Expr
   52     | Expr . T_MINUS Expr
   53     | Expr . T_MULT Expr
   54     | Expr . T_DIV Expr
   55     | Expr . T_GT Expr
   56     | Expr . T_GE Expr
   57     | Expr . T_EQ Expr
   58     | Expr . T_AND Expr
   59     | Expr . T_OR Expr
   61     | T_MINUS Expr .

    $default  reduce using rule 61 (Expr)


State 86

   69 Expr: T_NEW T_ID .
   70     | T_NEW T_ID . '(' ArgList ')'

    '('  shift, and go to state 112

    $default  reduce using rule 69 (Expr)


State 87

   51 Expr: Expr . T_PLUS Expr
   52     | Expr . T_MINUS Expr
   53     | Expr . T_MULT Expr
   54     | Expr . T_DIV Expr
   55     | Expr . T_GT Expr
   56     | Expr . T_GE Expr
   57     | Expr . T_EQ Expr
   58     | Expr . T_AND Expr
   59     | Expr . T_OR Expr
   60     | T_NOT Expr .

    $default  reduce using rule 60 (Expr)


State 88

   37 MethodCall: T_ID '.' . T_ID '(' ArgList ')'
   71 MemberAccess: T_ID '.' . T_ID

    T_ID  shift, and go to state 113


State 89

   51 Expr: Expr . T_PLUS Expr
   52     | Expr . T_MINUS Expr
   53     | Expr . T_MULT Expr
   54     | Expr . T_DIV Expr
   55     | Expr . T_GT Expr
   56     | Expr . T_GE Expr
   57     | Expr . T_EQ Expr
   58     | Expr . T_AND Expr
   59     | Expr . T_OR Expr
   65     | '(' Expr . ')'

    T_PLUS   shift, and go to state 90
    T_MINUS  shift, and go to state 91
    T_MULT   shift, and go to state 92
    T_DIV    shift, and go to state 93
    T_GT     shift, and go to state 94
    T_GE     shift, and go to state 95
    T_AND    shift, and go to state 96
    T_OR     shift, and go to state 97
    T_EQ     shift, and go to state 98
    ')'      shift, and go to state 114


State 90

   51 Expr: Expr T_PLUS . Expr

    T_NUM    shift, and go to state 61
    T_MINUS  shift, and go to state 62
    T_NEW    shift, and go to state 63
    T_TRUE   shift, and go to state 64
    T_FALSE  shift, and go to state 65
    T_NOT    shift, and go to state 66
    T_ID     shift, and go to state 67
    '('      shift, and go to state 68

    MethodCall    go to state 69
    Expr          go to state 115
    MemberAccess  go to state 71


State 91
